minor text updates to snippets/notebooks

--- a/00 snippets/kaggle_download.ipynb
+++ b/00 snippets/kaggle_download.ipynb
@@ -19,10 +19,11 @@
    "cell_type": "markdown",
    "id": "d73a456d-0b1e-4751-9821-97a0fc4aa124",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "# Download Dataset"
+    "# Kaggle: Download Dataset"
    ]
   },
   {
