--- a/00 snippets/snippets.ipynb
+++ b/00 snippets/snippets.ipynb
@@ -18,6 +18,7 @@
    "cell_type": "markdown",
    "id": "dc925952-bcb0-46d2-b31c-a989605eb143",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -5853,10 +5854,11 @@
    "cell_type": "markdown",
    "id": "0b5a78d7-8963-4a3b-9610-495b80b014de",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "# Plotting Variance and Uniformization"
+    "# BoxPlots and Uniformization"
    ]
   },
   {
