change repository structure

--- a/forest_fires.ipynb
+++ b/forest_fires.ipynb
@@ -90,10 +90,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "sys.path.append('..')\n",
-    "\n",
     "from dslib.analysis import Analysis\n",
-    "lab, raw = Analysis.from_csv(\"forestfires.csv\")"
+    "lab, raw = Analysis.from_csv(\"data/forestfires.csv\")"
    ]
   },
   {
