--- a/wow_log.ipynb
+++ b/wow_log.ipynb
@@ -248,18 +248,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_05d08_row5_col0, #T_05d08_row5_col1, #T_05d08_row5_col2, #T_05d08_row6_col0, #T_05d08_row6_col1, #T_05d08_row6_col2 {\n",
+       "#T_de682_row5_col0, #T_de682_row5_col1, #T_de682_row5_col2, #T_de682_row6_col0, #T_de682_row6_col1, #T_de682_row6_col2 {\n",
        "  color: yellow;\n",
+       "  font-weight: bold;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_05d08_\">\n",
+       "<table id=\"T_de682_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
@@ -270,55 +271,55 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_05d08_level0_row0\" class=\"row_heading level0 row0\" >1</th>\n",
-       "      <td id=\"T_05d08_row0_col0\" class=\"data row0 col0\" >1/27 23:43:42.527</td>\n",
-       "      <td id=\"T_05d08_row0_col1\" class=\"data row0 col1\" >Creature-0-4216-2450-10260-177117-000073584C</td>\n",
-       "      <td id=\"T_05d08_row0_col2\" class=\"data row0 col2\" >\"Flintti-Azralon\"</td>\n",
+       "      <th id=\"T_de682_level0_row0\" class=\"row_heading level0 row0\" >1</th>\n",
+       "      <td id=\"T_de682_row0_col0\" class=\"data row0 col0\" >1/27 23:43:42.527</td>\n",
+       "      <td id=\"T_de682_row0_col1\" class=\"data row0 col1\" >Creature-0-4216-2450-10260-177117-000073584C</td>\n",
+       "      <td id=\"T_de682_row0_col2\" class=\"data row0 col2\" >\"Flintti-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_05d08_level0_row1\" class=\"row_heading level0 row1\" >0</th>\n",
-       "      <td id=\"T_05d08_row1_col0\" class=\"data row1 col0\" >1/27 23:43:42.243</td>\n",
-       "      <td id=\"T_05d08_row1_col1\" class=\"data row1 col1\" >Creature-0-4216-2450-10260-177117-000073584E</td>\n",
-       "      <td id=\"T_05d08_row1_col2\" class=\"data row1 col2\" >\"Djøw-Azralon\"</td>\n",
+       "      <th id=\"T_de682_level0_row1\" class=\"row_heading level0 row1\" >0</th>\n",
+       "      <td id=\"T_de682_row1_col0\" class=\"data row1 col0\" >1/27 23:43:42.243</td>\n",
+       "      <td id=\"T_de682_row1_col1\" class=\"data row1 col1\" >Creature-0-4216-2450-10260-177117-000073584E</td>\n",
+       "      <td id=\"T_de682_row1_col2\" class=\"data row1 col2\" >\"Djøw-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_05d08_level0_row2\" class=\"row_heading level0 row2\" >3</th>\n",
-       "      <td id=\"T_05d08_row2_col0\" class=\"data row2 col0\" >1/27 23:44:30.527</td>\n",
-       "      <td id=\"T_05d08_row2_col1\" class=\"data row2 col1\" >Creature-0-4216-2450-10260-177117-0000735873</td>\n",
-       "      <td id=\"T_05d08_row2_col2\" class=\"data row2 col2\" >\"Djøw-Azralon\"</td>\n",
+       "      <th id=\"T_de682_level0_row2\" class=\"row_heading level0 row2\" >3</th>\n",
+       "      <td id=\"T_de682_row2_col0\" class=\"data row2 col0\" >1/27 23:44:30.527</td>\n",
+       "      <td id=\"T_de682_row2_col1\" class=\"data row2 col1\" >Creature-0-4216-2450-10260-177117-0000735873</td>\n",
+       "      <td id=\"T_de682_row2_col2\" class=\"data row2 col2\" >\"Djøw-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_05d08_level0_row3\" class=\"row_heading level0 row3\" >2</th>\n",
-       "      <td id=\"T_05d08_row3_col0\" class=\"data row3 col0\" >1/27 23:44:28.073</td>\n",
-       "      <td id=\"T_05d08_row3_col1\" class=\"data row3 col1\" >Creature-0-4216-2450-10260-177117-0000735874</td>\n",
-       "      <td id=\"T_05d08_row3_col2\" class=\"data row3 col2\" >\"Thilokz-Azralon\"</td>\n",
+       "      <th id=\"T_de682_level0_row3\" class=\"row_heading level0 row3\" >2</th>\n",
+       "      <td id=\"T_de682_row3_col0\" class=\"data row3 col0\" >1/27 23:44:28.073</td>\n",
+       "      <td id=\"T_de682_row3_col1\" class=\"data row3 col1\" >Creature-0-4216-2450-10260-177117-0000735874</td>\n",
+       "      <td id=\"T_de682_row3_col2\" class=\"data row3 col2\" >\"Thilokz-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_05d08_level0_row4\" class=\"row_heading level0 row4\" >5</th>\n",
-       "      <td id=\"T_05d08_row4_col0\" class=\"data row4 col0\" >1/27 23:45:18.977</td>\n",
-       "      <td id=\"T_05d08_row4_col1\" class=\"data row4 col1\" >Creature-0-4216-2450-10260-177117-00007358A1</td>\n",
-       "      <td id=\"T_05d08_row4_col2\" class=\"data row4 col2\" >\"Djøw-Azralon\"</td>\n",
+       "      <th id=\"T_de682_level0_row4\" class=\"row_heading level0 row4\" >5</th>\n",
+       "      <td id=\"T_de682_row4_col0\" class=\"data row4 col0\" >1/27 23:45:18.977</td>\n",
+       "      <td id=\"T_de682_row4_col1\" class=\"data row4 col1\" >Creature-0-4216-2450-10260-177117-00007358A1</td>\n",
+       "      <td id=\"T_de682_row4_col2\" class=\"data row4 col2\" >\"Djøw-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_05d08_level0_row5\" class=\"row_heading level0 row5\" >4</th>\n",
-       "      <td id=\"T_05d08_row5_col0\" class=\"data row5 col0\" >1/27 23:45:18.728</td>\n",
-       "      <td id=\"T_05d08_row5_col1\" class=\"data row5 col1\" >Creature-0-4216-2450-10260-177117-00007358A3</td>\n",
-       "      <td id=\"T_05d08_row5_col2\" class=\"data row5 col2\" >\"Thilokz-Azralon\"</td>\n",
+       "      <th id=\"T_de682_level0_row5\" class=\"row_heading level0 row5\" >4</th>\n",
+       "      <td id=\"T_de682_row5_col0\" class=\"data row5 col0\" >1/27 23:45:18.728</td>\n",
+       "      <td id=\"T_de682_row5_col1\" class=\"data row5 col1\" >Creature-0-4216-2450-10260-177117-00007358A3</td>\n",
+       "      <td id=\"T_de682_row5_col2\" class=\"data row5 col2\" >\"Thilokz-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_05d08_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
-       "      <td id=\"T_05d08_row6_col0\" class=\"data row6 col0\" >1/27 23:45:24.821</td>\n",
-       "      <td id=\"T_05d08_row6_col1\" class=\"data row6 col1\" >Creature-0-4216-2450-10260-177117-00007358A3</td>\n",
-       "      <td id=\"T_05d08_row6_col2\" class=\"data row6 col2\" >\"Ryuudin-Azralon\"</td>\n",
+       "      <th id=\"T_de682_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_de682_row6_col0\" class=\"data row6 col0\" >1/27 23:45:24.821</td>\n",
+       "      <td id=\"T_de682_row6_col1\" class=\"data row6 col1\" >Creature-0-4216-2450-10260-177117-00007358A3</td>\n",
+       "      <td id=\"T_de682_row6_col2\" class=\"data row6 col2\" >\"Ryuudin-Azralon\"</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x29e89ed7c10>"
+       "<pandas.io.formats.style.Styler at 0x29e8a20f310>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,21 +330,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_4652c_row0_col1, #T_4652c_row0_col2, #T_4652c_row1_col1, #T_4652c_row1_col2, #T_4652c_row2_col1, #T_4652c_row2_col2, #T_4652c_row3_col1, #T_4652c_row3_col2, #T_4652c_row4_col1, #T_4652c_row4_col2, #T_4652c_row5_col1, #T_4652c_row5_col2 {\n",
+       "#T_6619d_row0_col1, #T_6619d_row0_col2, #T_6619d_row1_col1, #T_6619d_row1_col2, #T_6619d_row2_col1, #T_6619d_row2_col2, #T_6619d_row3_col1, #T_6619d_row3_col2, #T_6619d_row4_col1, #T_6619d_row4_col2, #T_6619d_row5_col1, #T_6619d_row5_col2 {\n",
        "  color: aqua;\n",
        "}\n",
-       "#T_4652c_row0_col3, #T_4652c_row1_col3, #T_4652c_row2_col3, #T_4652c_row3_col3, #T_4652c_row4_col3, #T_4652c_row5_col3 {\n",
+       "#T_6619d_row0_col3, #T_6619d_row1_col3, #T_6619d_row2_col3, #T_6619d_row3_col3, #T_6619d_row4_col3, #T_6619d_row5_col3 {\n",
        "  color: yellow;\n",
+       "  font-weight: bold;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_4652c_\">\n",
+       "<table id=\"T_6619d_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
@@ -356,61 +358,61 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_4652c_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_4652c_row0_col0\" class=\"data row0 col0\" >Creature-0-4216-2450-10260-177117-000073584C</td>\n",
-       "      <td id=\"T_4652c_row0_col1\" class=\"data row0 col1\" >1900-01-27 23:43:23.358000</td>\n",
-       "      <td id=\"T_4652c_row0_col2\" class=\"data row0 col2\" >1900-01-27 23:43:42.527000</td>\n",
-       "      <td id=\"T_4652c_row0_col3\" class=\"data row0 col3\" >0 days 00:00:19.169000</td>\n",
-       "      <td id=\"T_4652c_row0_col4\" class=\"data row0 col4\" >\"Flintti-Azralon\"</td>\n",
+       "      <th id=\"T_6619d_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_6619d_row0_col0\" class=\"data row0 col0\" >Creature-0-4216-2450-10260-177117-000073584C</td>\n",
+       "      <td id=\"T_6619d_row0_col1\" class=\"data row0 col1\" >1900-01-27 23:43:23.358000</td>\n",
+       "      <td id=\"T_6619d_row0_col2\" class=\"data row0 col2\" >1900-01-27 23:43:42.527000</td>\n",
+       "      <td id=\"T_6619d_row0_col3\" class=\"data row0 col3\" >0 days 00:00:19.169000</td>\n",
+       "      <td id=\"T_6619d_row0_col4\" class=\"data row0 col4\" >\"Flintti-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_4652c_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_4652c_row1_col0\" class=\"data row1 col0\" >Creature-0-4216-2450-10260-177117-000073584E</td>\n",
-       "      <td id=\"T_4652c_row1_col1\" class=\"data row1 col1\" >1900-01-27 23:43:24.889000</td>\n",
-       "      <td id=\"T_4652c_row1_col2\" class=\"data row1 col2\" >1900-01-27 23:43:42.243000</td>\n",
-       "      <td id=\"T_4652c_row1_col3\" class=\"data row1 col3\" >0 days 00:00:17.354000</td>\n",
-       "      <td id=\"T_4652c_row1_col4\" class=\"data row1 col4\" >\"Djøw-Azralon\"</td>\n",
+       "      <th id=\"T_6619d_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_6619d_row1_col0\" class=\"data row1 col0\" >Creature-0-4216-2450-10260-177117-000073584E</td>\n",
+       "      <td id=\"T_6619d_row1_col1\" class=\"data row1 col1\" >1900-01-27 23:43:24.889000</td>\n",
+       "      <td id=\"T_6619d_row1_col2\" class=\"data row1 col2\" >1900-01-27 23:43:42.243000</td>\n",
+       "      <td id=\"T_6619d_row1_col3\" class=\"data row1 col3\" >0 days 00:00:17.354000</td>\n",
+       "      <td id=\"T_6619d_row1_col4\" class=\"data row1 col4\" >\"Djøw-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_4652c_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_4652c_row2_col0\" class=\"data row2 col0\" >Creature-0-4216-2450-10260-177117-0000735873</td>\n",
-       "      <td id=\"T_4652c_row2_col1\" class=\"data row2 col1\" >1900-01-27 23:44:02.291000</td>\n",
-       "      <td id=\"T_4652c_row2_col2\" class=\"data row2 col2\" >1900-01-27 23:44:30.527000</td>\n",
-       "      <td id=\"T_4652c_row2_col3\" class=\"data row2 col3\" >0 days 00:00:28.236000</td>\n",
-       "      <td id=\"T_4652c_row2_col4\" class=\"data row2 col4\" >\"Djøw-Azralon\"</td>\n",
+       "      <th id=\"T_6619d_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_6619d_row2_col0\" class=\"data row2 col0\" >Creature-0-4216-2450-10260-177117-0000735873</td>\n",
+       "      <td id=\"T_6619d_row2_col1\" class=\"data row2 col1\" >1900-01-27 23:44:02.291000</td>\n",
+       "      <td id=\"T_6619d_row2_col2\" class=\"data row2 col2\" >1900-01-27 23:44:30.527000</td>\n",
+       "      <td id=\"T_6619d_row2_col3\" class=\"data row2 col3\" >0 days 00:00:28.236000</td>\n",
+       "      <td id=\"T_6619d_row2_col4\" class=\"data row2 col4\" >\"Djøw-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_4652c_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_4652c_row3_col0\" class=\"data row3 col0\" >Creature-0-4216-2450-10260-177117-0000735874</td>\n",
-       "      <td id=\"T_4652c_row3_col1\" class=\"data row3 col1\" >1900-01-27 23:44:03.698000</td>\n",
-       "      <td id=\"T_4652c_row3_col2\" class=\"data row3 col2\" >1900-01-27 23:44:28.073000</td>\n",
-       "      <td id=\"T_4652c_row3_col3\" class=\"data row3 col3\" >0 days 00:00:24.375000</td>\n",
-       "      <td id=\"T_4652c_row3_col4\" class=\"data row3 col4\" >\"Thilokz-Azralon\"</td>\n",
+       "      <th id=\"T_6619d_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_6619d_row3_col0\" class=\"data row3 col0\" >Creature-0-4216-2450-10260-177117-0000735874</td>\n",
+       "      <td id=\"T_6619d_row3_col1\" class=\"data row3 col1\" >1900-01-27 23:44:03.698000</td>\n",
+       "      <td id=\"T_6619d_row3_col2\" class=\"data row3 col2\" >1900-01-27 23:44:28.073000</td>\n",
+       "      <td id=\"T_6619d_row3_col3\" class=\"data row3 col3\" >0 days 00:00:24.375000</td>\n",
+       "      <td id=\"T_6619d_row3_col4\" class=\"data row3 col4\" >\"Thilokz-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_4652c_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_4652c_row4_col0\" class=\"data row4 col0\" >Creature-0-4216-2450-10260-177117-00007358A1</td>\n",
-       "      <td id=\"T_4652c_row4_col1\" class=\"data row4 col1\" >1900-01-27 23:44:48.420000</td>\n",
-       "      <td id=\"T_4652c_row4_col2\" class=\"data row4 col2\" >1900-01-27 23:45:18.977000</td>\n",
-       "      <td id=\"T_4652c_row4_col3\" class=\"data row4 col3\" >0 days 00:00:30.557000</td>\n",
-       "      <td id=\"T_4652c_row4_col4\" class=\"data row4 col4\" >\"Djøw-Azralon\"</td>\n",
+       "      <th id=\"T_6619d_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_6619d_row4_col0\" class=\"data row4 col0\" >Creature-0-4216-2450-10260-177117-00007358A1</td>\n",
+       "      <td id=\"T_6619d_row4_col1\" class=\"data row4 col1\" >1900-01-27 23:44:48.420000</td>\n",
+       "      <td id=\"T_6619d_row4_col2\" class=\"data row4 col2\" >1900-01-27 23:45:18.977000</td>\n",
+       "      <td id=\"T_6619d_row4_col3\" class=\"data row4 col3\" >0 days 00:00:30.557000</td>\n",
+       "      <td id=\"T_6619d_row4_col4\" class=\"data row4 col4\" >\"Djøw-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_4652c_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_4652c_row5_col0\" class=\"data row5 col0\" >Creature-0-4216-2450-10260-177117-00007358A3</td>\n",
-       "      <td id=\"T_4652c_row5_col1\" class=\"data row5 col1\" >1900-01-27 23:44:49.918000</td>\n",
-       "      <td id=\"T_4652c_row5_col2\" class=\"data row5 col2\" >1900-01-27 23:45:24.821000</td>\n",
-       "      <td id=\"T_4652c_row5_col3\" class=\"data row5 col3\" >0 days 00:00:34.903000</td>\n",
-       "      <td id=\"T_4652c_row5_col4\" class=\"data row5 col4\" >\"Ryuudin-Azralon\"</td>\n",
+       "      <th id=\"T_6619d_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_6619d_row5_col0\" class=\"data row5 col0\" >Creature-0-4216-2450-10260-177117-00007358A3</td>\n",
+       "      <td id=\"T_6619d_row5_col1\" class=\"data row5 col1\" >1900-01-27 23:44:49.918000</td>\n",
+       "      <td id=\"T_6619d_row5_col2\" class=\"data row5 col2\" >1900-01-27 23:45:24.821000</td>\n",
+       "      <td id=\"T_6619d_row5_col3\" class=\"data row5 col3\" >0 days 00:00:34.903000</td>\n",
+       "      <td id=\"T_6619d_row5_col4\" class=\"data row5 col4\" >\"Ryuudin-Azralon\"</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x29e8a20a2e0>"
+       "<pandas.io.formats.style.Styler at 0x29db421ad90>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
