--- a/wow_log.ipynb
+++ b/wow_log.ipynb
@@ -250,19 +250,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_57a1f_row2_col0, #T_57a1f_row2_col1, #T_57a1f_row2_col2, #T_57a1f_row3_col0, #T_57a1f_row3_col1, #T_57a1f_row3_col2 {\n",
+       "#T_23af7_row2_col0, #T_23af7_row2_col1, #T_23af7_row2_col2, #T_23af7_row3_col0, #T_23af7_row3_col1, #T_23af7_row3_col2 {\n",
        "  color: yellow;\n",
        "  font-weight: bold;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_57a1f_\">\n",
+       "<table id=\"T_23af7_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
@@ -273,91 +273,91 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_57a1f_level0_row0\" class=\"row_heading level0 row0\" >1</th>\n",
-       "      <td id=\"T_57a1f_row0_col0\" class=\"data row0 col0\" >2022-01-27 23:27:56.643000</td>\n",
-       "      <td id=\"T_57a1f_row0_col1\" class=\"data row0 col1\" >Creature-0-4216-2450-10260-177117-000073549A</td>\n",
-       "      <td id=\"T_57a1f_row0_col2\" class=\"data row0 col2\" >\"Thilokz-Azralon\"</td>\n",
+       "      <th id=\"T_23af7_level0_row0\" class=\"row_heading level0 row0\" >1</th>\n",
+       "      <td id=\"T_23af7_row0_col0\" class=\"data row0 col0\" >2022-01-27 23:27:56.643000</td>\n",
+       "      <td id=\"T_23af7_row0_col1\" class=\"data row0 col1\" >Creature-0-4216-2450-10260-177117-000073549A</td>\n",
+       "      <td id=\"T_23af7_row0_col2\" class=\"data row0 col2\" >\"Thilokz-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_57a1f_level0_row1\" class=\"row_heading level0 row1\" >0</th>\n",
-       "      <td id=\"T_57a1f_row1_col0\" class=\"data row1 col0\" >2022-01-27 23:27:55.981000</td>\n",
-       "      <td id=\"T_57a1f_row1_col1\" class=\"data row1 col1\" >Creature-0-4216-2450-10260-177117-000073549C</td>\n",
-       "      <td id=\"T_57a1f_row1_col2\" class=\"data row1 col2\" >\"Zairoz-Azralon\"</td>\n",
+       "      <th id=\"T_23af7_level0_row1\" class=\"row_heading level0 row1\" >0</th>\n",
+       "      <td id=\"T_23af7_row1_col0\" class=\"data row1 col0\" >2022-01-27 23:27:55.981000</td>\n",
+       "      <td id=\"T_23af7_row1_col1\" class=\"data row1 col1\" >Creature-0-4216-2450-10260-177117-000073549C</td>\n",
+       "      <td id=\"T_23af7_row1_col2\" class=\"data row1 col2\" >\"Zairoz-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_57a1f_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_57a1f_row2_col0\" class=\"data row2 col0\" >2022-01-27 23:28:37.259000</td>\n",
-       "      <td id=\"T_57a1f_row2_col1\" class=\"data row2 col1\" >Creature-0-4216-2450-10260-177117-00007354C7</td>\n",
-       "      <td id=\"T_57a1f_row2_col2\" class=\"data row2 col2\" >\"Thilokz-Azralon\"</td>\n",
+       "      <th id=\"T_23af7_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_23af7_row2_col0\" class=\"data row2 col0\" >2022-01-27 23:28:37.259000</td>\n",
+       "      <td id=\"T_23af7_row2_col1\" class=\"data row2 col1\" >Creature-0-4216-2450-10260-177117-00007354C7</td>\n",
+       "      <td id=\"T_23af7_row2_col2\" class=\"data row2 col2\" >\"Thilokz-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_57a1f_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_57a1f_row3_col0\" class=\"data row3 col0\" >2022-01-27 23:28:43.596000</td>\n",
-       "      <td id=\"T_57a1f_row3_col1\" class=\"data row3 col1\" >Creature-0-4216-2450-10260-177117-00007354C7</td>\n",
-       "      <td id=\"T_57a1f_row3_col2\" class=\"data row3 col2\" >\"Spartanovix-Azralon\"</td>\n",
+       "      <th id=\"T_23af7_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_23af7_row3_col0\" class=\"data row3 col0\" >2022-01-27 23:28:43.596000</td>\n",
+       "      <td id=\"T_23af7_row3_col1\" class=\"data row3 col1\" >Creature-0-4216-2450-10260-177117-00007354C7</td>\n",
+       "      <td id=\"T_23af7_row3_col2\" class=\"data row3 col2\" >\"Spartanovix-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_57a1f_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_57a1f_row4_col0\" class=\"data row4 col0\" >2022-01-27 23:28:44.977000</td>\n",
-       "      <td id=\"T_57a1f_row4_col1\" class=\"data row4 col1\" >Creature-0-4216-2450-10260-177117-00007354C9</td>\n",
-       "      <td id=\"T_57a1f_row4_col2\" class=\"data row4 col2\" >\"Zairoz-Azralon\"</td>\n",
+       "      <th id=\"T_23af7_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_23af7_row4_col0\" class=\"data row4 col0\" >2022-01-27 23:28:44.977000</td>\n",
+       "      <td id=\"T_23af7_row4_col1\" class=\"data row4 col1\" >Creature-0-4216-2450-10260-177117-00007354C9</td>\n",
+       "      <td id=\"T_23af7_row4_col2\" class=\"data row4 col2\" >\"Zairoz-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_57a1f_level0_row5\" class=\"row_heading level0 row5\" >6</th>\n",
-       "      <td id=\"T_57a1f_row5_col0\" class=\"data row5 col0\" >2022-01-27 23:29:19.650000</td>\n",
-       "      <td id=\"T_57a1f_row5_col1\" class=\"data row5 col1\" >Creature-0-4216-2450-10260-177117-00007354EA</td>\n",
-       "      <td id=\"T_57a1f_row5_col2\" class=\"data row5 col2\" >\"Thilokz-Azralon\"</td>\n",
+       "      <th id=\"T_23af7_level0_row5\" class=\"row_heading level0 row5\" >6</th>\n",
+       "      <td id=\"T_23af7_row5_col0\" class=\"data row5 col0\" >2022-01-27 23:29:19.650000</td>\n",
+       "      <td id=\"T_23af7_row5_col1\" class=\"data row5 col1\" >Creature-0-4216-2450-10260-177117-00007354EA</td>\n",
+       "      <td id=\"T_23af7_row5_col2\" class=\"data row5 col2\" >\"Thilokz-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_57a1f_level0_row6\" class=\"row_heading level0 row6\" >5</th>\n",
-       "      <td id=\"T_57a1f_row6_col0\" class=\"data row6 col0\" >2022-01-27 23:29:13.844000</td>\n",
-       "      <td id=\"T_57a1f_row6_col1\" class=\"data row6 col1\" >Creature-0-4216-2450-10260-177117-00007354EC</td>\n",
-       "      <td id=\"T_57a1f_row6_col2\" class=\"data row6 col2\" >\"Djøw-Azralon\"</td>\n",
+       "      <th id=\"T_23af7_level0_row6\" class=\"row_heading level0 row6\" >5</th>\n",
+       "      <td id=\"T_23af7_row6_col0\" class=\"data row6 col0\" >2022-01-27 23:29:13.844000</td>\n",
+       "      <td id=\"T_23af7_row6_col1\" class=\"data row6 col1\" >Creature-0-4216-2450-10260-177117-00007354EC</td>\n",
+       "      <td id=\"T_23af7_row6_col2\" class=\"data row6 col2\" >\"Djøw-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_57a1f_level0_row7\" class=\"row_heading level0 row7\" >9</th>\n",
-       "      <td id=\"T_57a1f_row7_col0\" class=\"data row7 col0\" >2022-01-27 23:29:58.905000</td>\n",
-       "      <td id=\"T_57a1f_row7_col1\" class=\"data row7 col1\" >Creature-0-4216-2450-10260-177117-0000735514</td>\n",
-       "      <td id=\"T_57a1f_row7_col2\" class=\"data row7 col2\" >\"Spartanovix-Azralon\"</td>\n",
+       "      <th id=\"T_23af7_level0_row7\" class=\"row_heading level0 row7\" >9</th>\n",
+       "      <td id=\"T_23af7_row7_col0\" class=\"data row7 col0\" >2022-01-27 23:29:58.905000</td>\n",
+       "      <td id=\"T_23af7_row7_col1\" class=\"data row7 col1\" >Creature-0-4216-2450-10260-177117-0000735514</td>\n",
+       "      <td id=\"T_23af7_row7_col2\" class=\"data row7 col2\" >\"Spartanovix-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_57a1f_level0_row8\" class=\"row_heading level0 row8\" >7</th>\n",
-       "      <td id=\"T_57a1f_row8_col0\" class=\"data row8 col0\" >2022-01-27 23:29:51.063000</td>\n",
-       "      <td id=\"T_57a1f_row8_col1\" class=\"data row8 col1\" >Creature-0-4216-2450-10260-177117-0000735515</td>\n",
-       "      <td id=\"T_57a1f_row8_col2\" class=\"data row8 col2\" >\"Thilokz-Azralon\"</td>\n",
+       "      <th id=\"T_23af7_level0_row8\" class=\"row_heading level0 row8\" >7</th>\n",
+       "      <td id=\"T_23af7_row8_col0\" class=\"data row8 col0\" >2022-01-27 23:29:51.063000</td>\n",
+       "      <td id=\"T_23af7_row8_col1\" class=\"data row8 col1\" >Creature-0-4216-2450-10260-177117-0000735515</td>\n",
+       "      <td id=\"T_23af7_row8_col2\" class=\"data row8 col2\" >\"Thilokz-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_57a1f_level0_row9\" class=\"row_heading level0 row9\" >8</th>\n",
-       "      <td id=\"T_57a1f_row9_col0\" class=\"data row9 col0\" >2022-01-27 23:29:54.010000</td>\n",
-       "      <td id=\"T_57a1f_row9_col1\" class=\"data row9 col1\" >Creature-0-4216-2450-10260-177117-0000735517</td>\n",
-       "      <td id=\"T_57a1f_row9_col2\" class=\"data row9 col2\" >\"Flintti-Azralon\"</td>\n",
+       "      <th id=\"T_23af7_level0_row9\" class=\"row_heading level0 row9\" >8</th>\n",
+       "      <td id=\"T_23af7_row9_col0\" class=\"data row9 col0\" >2022-01-27 23:29:54.010000</td>\n",
+       "      <td id=\"T_23af7_row9_col1\" class=\"data row9 col1\" >Creature-0-4216-2450-10260-177117-0000735517</td>\n",
+       "      <td id=\"T_23af7_row9_col2\" class=\"data row9 col2\" >\"Flintti-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_57a1f_level0_row10\" class=\"row_heading level0 row10\" >12</th>\n",
-       "      <td id=\"T_57a1f_row10_col0\" class=\"data row10 col0\" >2022-01-27 23:30:40.347000</td>\n",
-       "      <td id=\"T_57a1f_row10_col1\" class=\"data row10 col1\" >Creature-0-4216-2450-10260-177117-0000735538</td>\n",
-       "      <td id=\"T_57a1f_row10_col2\" class=\"data row10 col2\" >\"Spartanovix-Azralon\"</td>\n",
+       "      <th id=\"T_23af7_level0_row10\" class=\"row_heading level0 row10\" >12</th>\n",
+       "      <td id=\"T_23af7_row10_col0\" class=\"data row10 col0\" >2022-01-27 23:30:40.347000</td>\n",
+       "      <td id=\"T_23af7_row10_col1\" class=\"data row10 col1\" >Creature-0-4216-2450-10260-177117-0000735538</td>\n",
+       "      <td id=\"T_23af7_row10_col2\" class=\"data row10 col2\" >\"Spartanovix-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_57a1f_level0_row11\" class=\"row_heading level0 row11\" >10</th>\n",
-       "      <td id=\"T_57a1f_row11_col0\" class=\"data row11 col0\" >2022-01-27 23:30:34.464000</td>\n",
-       "      <td id=\"T_57a1f_row11_col1\" class=\"data row11 col1\" >Creature-0-4216-2450-10260-177117-000073553A</td>\n",
-       "      <td id=\"T_57a1f_row11_col2\" class=\"data row11 col2\" >\"Thilokz-Azralon\"</td>\n",
+       "      <th id=\"T_23af7_level0_row11\" class=\"row_heading level0 row11\" >10</th>\n",
+       "      <td id=\"T_23af7_row11_col0\" class=\"data row11 col0\" >2022-01-27 23:30:34.464000</td>\n",
+       "      <td id=\"T_23af7_row11_col1\" class=\"data row11 col1\" >Creature-0-4216-2450-10260-177117-000073553A</td>\n",
+       "      <td id=\"T_23af7_row11_col2\" class=\"data row11 col2\" >\"Thilokz-Azralon\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_57a1f_level0_row12\" class=\"row_heading level0 row12\" >11</th>\n",
-       "      <td id=\"T_57a1f_row12_col0\" class=\"data row12 col0\" >2022-01-27 23:30:35.306000</td>\n",
-       "      <td id=\"T_57a1f_row12_col1\" class=\"data row12 col1\" >Creature-0-4216-2450-10260-177117-000073553B</td>\n",
-       "      <td id=\"T_57a1f_row12_col2\" class=\"data row12 col2\" >\"Shÿranui-Azralon\"</td>\n",
+       "      <th id=\"T_23af7_level0_row12\" class=\"row_heading level0 row12\" >11</th>\n",
+       "      <td id=\"T_23af7_row12_col0\" class=\"data row12 col0\" >2022-01-27 23:30:35.306000</td>\n",
+       "      <td id=\"T_23af7_row12_col1\" class=\"data row12 col1\" >Creature-0-4216-2450-10260-177117-000073553B</td>\n",
+       "      <td id=\"T_23af7_row12_col2\" class=\"data row12 col2\" >\"Shÿranui-Azralon\"</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x2e08737af10>"
+       "<pandas.io.formats.style.Styler at 0x2e089208d30>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
