add file uploader test

--- a/wow_log.ipynb
+++ b/wow_log.ipynb
@@ -34,36 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<style type='text/css'>\n",
-       ".datatable table.frame { margin-bottom: 0; }\n",
-       ".datatable table.frame thead { border-bottom: none; }\n",
-       ".datatable table.frame tr.coltypes td {  color: #FFFFFF;  line-height: 6px;  padding: 0 0.5em;}\n",
-       ".datatable .bool    { background: #DDDD99; }\n",
-       ".datatable .object  { background: #565656; }\n",
-       ".datatable .int     { background: #5D9E5D; }\n",
-       ".datatable .float   { background: #4040CC; }\n",
-       ".datatable .str     { background: #CC4040; }\n",
-       ".datatable .time    { background: #40CC40; }\n",
-       ".datatable .row_index {  background: var(--jp-border-color3);  border-right: 1px solid var(--jp-border-color0);  color: var(--jp-ui-font-color3);  font-size: 9px;}\n",
-       ".datatable .frame tbody td { text-align: left; }\n",
-       ".datatable .frame tr.coltypes .row_index {  background: var(--jp-border-color0);}\n",
-       ".datatable th:nth-child(2) { padding-left: 12px; }\n",
-       ".datatable .hellipsis {  color: var(--jp-cell-editor-border-color);}\n",
-       ".datatable .vellipsis {  background: var(--jp-layout-color0);  color: var(--jp-cell-editor-border-color);}\n",
-       ".datatable .na {  color: var(--jp-cell-editor-border-color);  font-size: 80%;}\n",
-       ".datatable .sp {  opacity: 0.25;}\n",
-       ".datatable .footer { font-size: 9px; }\n",
-       ".datatable .frame_dimensions {  background: var(--jp-border-color3);  border-top: 1px solid var(--jp-border-color0);  color: var(--jp-ui-font-color3);  display: inline-block;  opacity: 0.6;  padding: 1px 10px 1px 5px;}\n",
-       "</style>\n"
-      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e2faf81602a34246b07fa888f7baab8b",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "VBox(children=(FileUpload(value={}, description='Upload'), Output()))"
       ]
      },
      "metadata": {},
@@ -73,10 +55,39 @@
    "source": [
     "# Initialize\n",
     "import pandas as pd\n",
+    "import ipywidgets as widgets\n",
     "\n",
     "from wow.query import Query, Predicate\n",
     "from wow.log import Record, Encounter\n",
     "\n",
+    "from IPython.display import display\n",
+    "\n",
+    "# import hashlib\n",
+    "\n",
+    "out = widgets.Output()\n",
+    "\n",
+    "def handler(x):\n",
+    "  with out:\n",
+    "    display('kkk')\n",
+    "  \n",
+    "file_input = widgets.FileUpload()\n",
+    "file_input.observe(handler, names='value')\n",
+    "\n",
+    "widgets.VBox([\n",
+    "  file_input,\n",
+    "  out\n",
+    "])\n",
+    "\n",
+    "# myfiles = file_input.get_files()\n",
+    "# myfiles[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# file = r'wow/WoWCombatLog-012622_215632.txt'\n",
     "file = r'C:\\Program Files (x86)\\World of Warcraft\\_retail_\\Logs\\WoWCombatLog-012722_214646.txt'\n",
     "\n",
@@ -99,23 +110,8 @@
    "source": [
     "# Create Record List\n",
     "\n",
-    "log = Query(enumerate(raw)).map(lambda x: Record(x)).list()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0  =>  20\n"
-     ]
-    }
-   ],
-   "source": [
+    "log = Query(enumerate(raw)).map(lambda x: Record(x)).list()\n",
+    "\n",
     "# Split Encounters\n",
     "\n",
     "qLog = Query(log)\n",
@@ -125,7 +121,7 @@
     "encounters = Query(zip(beg, end)).map(lambda x: Encounter(log, x[0], x[1]))\n",
     "\n",
     "e = encounters.filter(\n",
-    "    lambda x: (x.timestamp_end - x.timestamp_begin).total_seconds() > 60\n",
+    "    lambda x: x.duration.total_seconds() > 60\n",
     ").list()\n",
     "print(len(encounters.list()), ' => ', len(e))\n"
    ]
