add more functionalities to query objects

--- a/wow_log.ipynb
+++ b/wow_log.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,20 +75,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22f03c59f79c42c0ad40a8f8f6eb9207",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Text(value=''), Button(button_style='success', description='Unzip', icon='check'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -98,7 +84,7 @@
     "from wow.query import Query, Predicate\n",
     "from wow.log import Record, Encounter\n",
     "\n",
-    "(z, f) = ui.import_file()"
+    "# (z, f) = ui.import_file()\n"
    ]
   },
   {
@@ -110,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +108,11 @@
     }
    ],
    "source": [
-    "encounters = Encounter.parse(f.content)"
+    "file = r'C:\\Program Files (x86)\\World of Warcraft\\_retail_\\Logs\\RaiderIOLogsArchive\\WoWCombatLog-012722_214646.txt'\n",
+    "# file = r'C:\\Program Files (x86)\\World of Warcraft\\_retail_\\Logs\\WoWCombatLog-013122_220632.txt'\n",
+    "\n",
+    "with open(file, 'r', encoding='utf-8') as filePtr:\n",
+    "    (log, encounters) = Encounter.parse(filePtr.readlines())\n"
    ]
   },
   {
@@ -134,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0771cdb64c4a4b2d872ca744b539de67",
+       "model_id": "08a41bebb1324238a0bbdb898029ea8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,12 +149,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = encounters[encSelect.value]"
+    "e = encounters[encSelect.value]\n",
+    "# Query(e.players).groupby(\n",
+    "#   lambda x: x[1],\n",
+    "#   lambda x: x[0],\n",
+    "# ).list()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Creature-0-4216-2450-10260-177117-0000734F06': ['\"Dii-Azralon\"',\n",
+       "  '\"Bablowboy-Azralon\"',\n",
+       "  '\"Maulfurionx-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-0000734F08': ['\"Thilokz-Azralon\"',\n",
+       "  '\"Spartanovix-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-0000734F31': ['\"Djøw-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-0000734F32': ['\"Thilokz-Azralon\"']}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.actions('SPELL_AURA_APPLIED', '\"Sorrowful Procession\"').groupby(\n",
+    "    lambda x: x[1],\n",
+    "    lambda x: x[2],\n",
+    ").dict()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'\"Helm of Suffering\"': {'SPELL_ABSORBED',\n",
+       "  'SPELL_CAST_START',\n",
+       "  'SPELL_CAST_SUCCESS',\n",
+       "  'SPELL_DAMAGE',\n",
+       "  'SPELL_MISSED'},\n",
+       " '\"Orb of Torment\"': {'SPELL_ABSORBED',\n",
+       "  'SPELL_AURA_APPLIED',\n",
+       "  'SPELL_AURA_REFRESH',\n",
+       "  'SPELL_AURA_REMOVED',\n",
+       "  'SPELL_CAST_START',\n",
+       "  'SPELL_CAST_SUCCESS',\n",
+       "  'SPELL_MISSED',\n",
+       "  'SPELL_PERIODIC_DAMAGE',\n",
+       "  'SPELL_PERIODIC_MISSED'}}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.hostile_action.groupby(\n",
+    "    lambda x: x[0],\n",
+    "    lambda x: x[1],\n",
+    "    set\n",
+    ").dict()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
