improve interface for creating encounter lists from files

--- a/wow_log.ipynb
+++ b/wow_log.ipynb
@@ -111,8 +111,7 @@
     "file = r'C:\\Program Files (x86)\\World of Warcraft\\_retail_\\Logs\\RaiderIOLogsArchive\\WoWCombatLog-012722_214646.txt'\n",
     "# file = r'C:\\Program Files (x86)\\World of Warcraft\\_retail_\\Logs\\WoWCombatLog-013122_220632.txt'\n",
     "\n",
-    "with open(file, 'r', encoding='utf-8') as filePtr:\n",
-    "    (log, encounters) = Encounter.parse(filePtr.readlines())\n"
+    "(log, encounters) = Encounter.parse(file)\n"
    ]
   },
   {
