--- a/wow_log.ipynb
+++ b/wow_log.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,6 +80,7 @@
    "source": [
     "# Initialize\n",
     "import wow.ui as ui\n",
+    "import wow.helper as help\n",
     "\n",
     "from wow.query import Query, Predicate\n",
     "from wow.log import Record, Encounter\n",
@@ -96,14 +97,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# help.unzip('WoWCombatLog-012722_214646.zip', 'wow')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0  =>  20\n"
+      "Encounters:  20\n"
      ]
     }
    ],
@@ -123,13 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08a41bebb1324238a0bbdb898029ea8c",
+       "model_id": "cfd1861c7d654b9d9ce19e80b7612b55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,22 +171,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Creature-0-4216-2450-10260-177117-0000734F06': ['\"Dii-Azralon\"',\n",
-       "  '\"Bablowboy-Azralon\"',\n",
-       "  '\"Maulfurionx-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-0000734F08': ['\"Thilokz-Azralon\"',\n",
-       "  '\"Spartanovix-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-0000734F31': ['\"Djøw-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-0000734F32': ['\"Thilokz-Azralon\"']}"
+       "{'Creature-0-4216-2450-10260-177117-0000734684': ['\"Thilokz-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-0000734685': ['\"Spartanovix-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-00007346AE': ['\"Thilokz-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-00007346B0': ['\"Djøw-Azralon\"',\n",
+       "  '\"Dii-Azralon\"',\n",
+       "  '\"Spartanovix-Azralon\"']}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,29 +199,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'\"Helm of Suffering\"': {'SPELL_ABSORBED',\n",
+       "{'\"Burning Shade\"': {'SPELL_AURA_APPLIED'},\n",
+       " '\"Helm of Suffering\"': {'SPELL_ABSORBED',\n",
        "  'SPELL_CAST_START',\n",
        "  'SPELL_CAST_SUCCESS',\n",
-       "  'SPELL_DAMAGE',\n",
-       "  'SPELL_MISSED'},\n",
+       "  'SPELL_DAMAGE'},\n",
        " '\"Orb of Torment\"': {'SPELL_ABSORBED',\n",
        "  'SPELL_AURA_APPLIED',\n",
-       "  'SPELL_AURA_REFRESH',\n",
        "  'SPELL_AURA_REMOVED',\n",
        "  'SPELL_CAST_START',\n",
        "  'SPELL_CAST_SUCCESS',\n",
-       "  'SPELL_MISSED',\n",
        "  'SPELL_PERIODIC_DAMAGE',\n",
        "  'SPELL_PERIODIC_MISSED'}}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,6 +230,19 @@
     "    lambda x: x[1],\n",
     "    set\n",
     ").dict()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import humanize\n",
+    "# from pympler import asizeof\n",
+    "# humanize.naturalsize(\n",
+    "# )\n",
+    "# asizeof.asizeof(log, limit=6, stats=3, cutoff=0)"
    ]
   },
   {
