--- a/wow_log.ipynb
+++ b/wow_log.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,21 +171,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Creature-0-4216-2450-10260-177117-0000734684': ['\"Thilokz-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-0000734685': ['\"Spartanovix-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-00007346AE': ['\"Thilokz-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-00007346B0': ['\"Djøw-Azralon\"',\n",
-       "  '\"Dii-Azralon\"',\n",
-       "  '\"Spartanovix-Azralon\"']}"
+       "{'Creature-0-4216-2450-10260-177117-0000735A55': ['\"Spartanovix-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-0000735A56': ['\"Djøw-Azralon\"',\n",
+       "  '\"Thilokz-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-0000735A7D': ['\"Djøw-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-0000735A7E': ['\"Thilokz-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-0000735AAB': ['\"Djøw-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-0000735AAD': ['\"Thilokz-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-0000735AD4': ['\"Spartanovix-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-0000735AD6': ['\"Thilokz-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-0000735AD7': ['\"Djøw-Azralon\"'],\n",
+       " 'Creature-0-4216-2450-10260-177117-0000735AF9': ['\"Jathäl-Azralon\"']}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,27 +204,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'\"Burning Shade\"': {'SPELL_AURA_APPLIED'},\n",
-       " '\"Helm of Suffering\"': {'SPELL_ABSORBED',\n",
+       "{'\"Helm of Suffering\"': {'SPELL_ABSORBED',\n",
        "  'SPELL_CAST_START',\n",
        "  'SPELL_CAST_SUCCESS',\n",
-       "  'SPELL_DAMAGE'},\n",
+       "  'SPELL_DAMAGE',\n",
+       "  'SPELL_MISSED'},\n",
+       " '\"Malicious Gauntlet\"': {'SPELL_CAST_SUCCESS'},\n",
        " '\"Orb of Torment\"': {'SPELL_ABSORBED',\n",
        "  'SPELL_AURA_APPLIED',\n",
+       "  'SPELL_AURA_REFRESH',\n",
        "  'SPELL_AURA_REMOVED',\n",
        "  'SPELL_CAST_START',\n",
        "  'SPELL_CAST_SUCCESS',\n",
        "  'SPELL_PERIODIC_DAMAGE',\n",
-       "  'SPELL_PERIODIC_MISSED'}}"
+       "  'SPELL_PERIODIC_MISSED'},\n",
+       " '\"Soulrender Dormazain\"': {'SPELL_AURA_APPLIED'}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,6 +251,74 @@
     "# humanize.naturalsize(\n",
     "# )\n",
     "# asizeof.asizeof(log, limit=6, stats=3, cutoff=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1/27 23:55:33.523: ENCOUNTER_END entry: 1050994\n",
+       "ENCOUNTER_END,2432,\"Remnant of Ner'zhul\",16,20,0,219706"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('355790', '\"Eternal Torment\"', '\"Orb of Torment\"', 'SPELL_CAST_SUCCESS'),\n",
+       " ('355790', '\"Eternal Torment\"', '\"Orb of Torment\"', 'SPELL_AURA_REMOVED'),\n",
+       " ('355790', '\"Eternal Torment\"', '\"Orb of Torment\"', 'SPELL_AURA_APPLIED'),\n",
+       " ('350694', '\"Grasp of Malice\"', '\"Malicious Gauntlet\"', 'SPELL_CAST_SUCCESS'),\n",
+       " ('108446', '\"Soul Link\"', '\"Orb of Torment\"', 'SPELL_ABSORBED'),\n",
+       " ('357812', '\"Suffering\"', '\"Helm of Suffering\"', 'SPELL_MISSED'),\n",
+       " ('349891', '\"Suffering\"', '\"Helm of Suffering\"', 'SPELL_CAST_SUCCESS'),\n",
+       " ('349891', '\"Suffering\"', '\"Helm of Suffering\"', 'SPELL_CAST_START'),\n",
+       " ('357812', '\"Suffering\"', '\"Helm of Suffering\"', 'SPELL_ABSORBED'),\n",
+       " ('357812', '\"Suffering\"', '\"Helm of Suffering\"', 'SPELL_DAMAGE'),\n",
+       " ('350073', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_PERIODIC_MISSED'),\n",
+       " ('350071', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_CAST_START'),\n",
+       " ('350071', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_CAST_SUCCESS'),\n",
+       " ('350073', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_AURA_REFRESH'),\n",
+       " ('352158', '\"Torment\"', '\"Soulrender Dormazain\"', 'SPELL_AURA_APPLIED'),\n",
+       " ('350073', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_AURA_REMOVED'),\n",
+       " ('350073', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_ABSORBED'),\n",
+       " ('350073', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_AURA_APPLIED'),\n",
+       " ('350073', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_PERIODIC_DAMAGE')]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.q.filter(\n",
+    "    Predicate.isCreatureAction()\n",
+    ").filter(\n",
+    "    Predicate.isActorHostile()\n",
+    ").map(\n",
+    "    ( Predicate.getActionId(), Predicate.getAction(), Predicate.getActor(), Predicate.getEvent())\n",
+    ").qset(\n",
+    ").sort(\n",
+    "    lambda x: x[1]\n",
+    ").list()\n"
    ]
   },
   {
